# okimi

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  SETUP_VERIFICATION.md
.github/: COPILOT_INSTRUCTIONS.md
.github/ISSUE_TEMPLATE/: setup-verification.md
.github/workflows/: ci.yml  jira-integration.yml
ansible/: inventory.ini
ansible/playbooks/: bazel.yml  development.yml  keycloak.yml  postgresql.yml  prerequisites.yml  redis.yml  services.yml  setup.yml  systemd.yml
ansible/roles/bazel/handlers/: main.yml
config/systemd/: okimi-auth.service  okimi-gateway.service  okimi-user.service
docs/: README.md
docs/architecture/: README.md
docs/deployment/: README.md
libs/: README.md
libs/concurrent/: BUILD
libs/core/: BUILD  placeholder.cc  placeholder.h
libs/memory/: BUILD
libs/observability/: BUILD
scripts/: check-status.sh  health-check.sh  import-jira-tickets.py  setup.sh  start-services.sh  stop-services.sh
services/: README.md
services/auth/: BUILD
services/gateway/: BUILD
services/user/: BUILD
