module(
    name = "okimi",
    version = "1.0.0",
)

# Java support
bazel_dep(name = "rules_java", version = "7.3.2")
bazel_dep(name = "rules_jvm_external", version = "6.0")

# C++ support
bazel_dep(name = "rules_cc", version = "0.0.9")

# Python support
bazel_dep(name = "rules_python", version = "0.31.0")

# Protocol Buffers
bazel_dep(name = "protobuf", version = "24.4")
bazel_dep(name = "rules_proto", version = "6.0.0-rc1")

# Testing
bazel_dep(name = "googletest", version = "1.14.0")

# Maven dependencies for Java services
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.springframework.boot:spring-boot-starter-web:3.2.0",
        "org.springframework.boot:spring-boot-starter-data-jpa:3.2.0",
        "org.springframework.boot:spring-boot-starter-security:3.2.0",
        "org.springframework.boot:spring-boot-starter-actuator:3.2.0",
        "org.springframework.cloud:spring-cloud-starter-gateway:4.1.0",
        "org.postgresql:postgresql:42.7.1",
        "redis.clients:jedis:5.1.0",
        "io.jsonwebtoken:jjwt-api:0.12.3",
        "io.jsonwebtoken:jjwt-impl:0.12.3",
        "io.jsonwebtoken:jjwt-jackson:0.12.3",
        "org.keycloak:keycloak-spring-boot-starter:23.0.3",
        "com.fasterxml.jackson.core:jackson-databind:2.16.0",
        "org.projectlombok:lombok:1.18.30",
        "org.slf4j:slf4j-api:2.0.9",
        "ch.qos.logback:logback-classic:1.4.14",
        "junit:junit:4.13.2",
        "org.springframework.boot:spring-boot-starter-test:3.2.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
